--- a/common/style/contact.css
+++ b/common/style/contact.css
@@ -18,11 +18,9 @@
   margin-top: 5px;
   font-size: 16px;
   width: 100%;
-  padding: 5px;
+  padding: 5px 0 5px 0;
   border: 1px solid #ccc;
-  appearance: none;
-  -webkit-appearance: none;
-  -moz-appearance: none;
+  box-sizing: border-box;
 }
 
 .contact_form_item_textarea {
@@ -30,10 +28,7 @@
 	width: 100%;
 	padding: 5px;
 	border: 1px solid #ccc;
-	appearance: none;
-	-webkit-appearance: none;
-  -moz-appearance: none;
-  resize: none;
+  box-sizing: border-box;
 }
 
 .contact_form_item_required {
