--- a/common/style/style.css
+++ b/common/style/style.css
@@ -8,6 +8,10 @@
   width: 100%;
   height: 50vh;
   vertical-align: top;
+  display: block;
+}
+.res_eye_catch {
+  display: none;
 }
 
 #kmd_feeling {
@@ -175,7 +179,12 @@ SP用レスポンシブ
     font-size: 1.5rem;
   }
   .eye_catch_img {
+    display: none;
+  }
+  .res_eye_catch {
+    width: 100%;
     height: 60vh;
+    display: block;
   }
 
   /* ----------------------------------
